# bulkifx

./: .clang-format  .gitignore  .sniffercommit.toml  CMakeLists.txt  main.c  main.py  readme.md
bulkifxApp/: __init__.py  core.py  ffi.py
include/: bulk.h  core.h  core.hpp  img_proc.h
src/: bulk.c  core.c  core.cpp  img_proc.c  main.c  main.cpp
